[package]
name = "serve-results-test"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
gotham_derive = "*"
rusqlite = "0.21.0"
hyper = "*"
mime = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"